--- a/ArrayList/ArrayList.csproj
+++ b/ArrayList/ArrayList.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{858FD156-367A-42DC-A869-4B0498620AC2}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Rechtschreibkontrolle</RootNamespace>
-    <AssemblyName>Rechtschreibkontrolle</AssemblyName>
+    <ProjectGuid>{843E71DF-1DAF-4B15-8325-367621222DD8}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ArrayList</RootNamespace>
+    <AssemblyName>ArrayList</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,26 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileLoader.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ArrayList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ArrayList\ArrayList.csproj">
-      <Project>{843e71df-1daf-4b15-8325-367621222dd8}</Project>
-      <Name>ArrayList</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SinglyLinkedList\SinglyLinkedList.csproj">
-      <Project>{1b24cbc3-6ba3-4bf0-8869-69e81544044e}</Project>
-      <Name>SinglyLinkedList</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SLL_Test\SLL_Test.csproj">
-      <Project>{abe7221b-86dd-4489-8a59-1bc1e7f2ac99}</Project>
-      <Name>SLL_Test</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
